--- a/app/globals.css
+++ b/app/globals.css
@@ -25,15 +25,9 @@
     --ring: 224 71% 4%;
     --radius: 0.75rem;
   }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
 
   body {
-    @apply bg-white text-brand-muted;
+    @apply bg-white text-brand-muted border-border;
     font-family: var(--font-space-grotesk), system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-feature-settings: "rlig" 1, "calt" 1;
   }
